# crane_plus_v2_motion_planning

./: .gitignore  .gitmodules  README.md  crane_plus_setup.sh  crane_plus_setup_FULL.sh  frames.gv  requirements.txt  ros-kinetic.sh  setup.sh
crane_plus_control/: .~lock.result.csv#  CMakeLists.txt  README.md  benchmark_db_setup.sh  install-reqs.sh  package.xml  parameter_tuning_setup.sh  requirements.txt  result.csv  utils.py
crane_plus_control/benchmarks/: benchmark.db  benchmark_plots  ompl_baseline.csv  planner_configs_Cano_etal_default_baseline.csv
crane_plus_control/config/: benchmark_config.yaml  benchmark_test.yaml  parameter_tuning.yaml  planner_configs.yaml
crane_plus_control/launch/: benchmark.launch  control.launch  named_pose.launch  parameter_tuning.launch  timed_roslaunch.launch
crane_plus_control/nodes/: backbend.cpp  headless.cpp  named_pose.cpp  parameter_tuning.cpp  parameter_tuning_old.cpp  resting.cpp  vertical.cpp
crane_plus_control/results/: Cano_etal_baseline.csv  Cano_etal_default.csv  Cano_etal_default_baseline.csv  Cano_etal_ompl.csv  Cano_etal_rand.csv  Cano_etal_tpe.csv  Cano_etal_tune_tpe.csv  OMPL_baseline.csv  Untitled.ipynb  __init__.py  ompl_baseline.csv  planner_configs_Cano_etal_default_baseline.csv  rename.ipynb  result_analysis.ipynb  result_comparison.md  results_overview.md
crane_plus_control/results/benchmarks/: benchmark.db  benchmark_plots
crane_plus_control/results/final/: Burger_etal_BiTRRTkConfigDefault.csv  Burger_etal_RRTConnectkConfigDefault.csv  Burger_etal_auc_bandit_BiRRT.csv  Burger_etal_auc_bandit_RRTConnect.csv  Burger_etal_aucbandit_BKPIECE.csv  Burger_etal_aucbandit_BiTRRT.csv  Burger_etal_aucbandit_RRTConnect.csv  Burger_etal_default.csv  Burger_etal_gp_BKPIECE.csv  Burger_etal_gp_RRTConnect.csv  Burger_etal_ompl.csv  Burger_etal_rand_BKPIECE.csv  Burger_etal_rand_BKPiece.csv  Burger_etal_rand_BiRRT.csv  Burger_etal_rand_RRTConnect.csv  Burger_etal_rf_BKPIECE.csv  Burger_etal_rf_BiTRRT.csv  Burger_etal_smac_BKPIECE.csv  Burger_etal_smac_BKPiece.csv  Burger_etal_smac_BiRRT.csv  Burger_etal_smac_BiTRRT.csv  Burger_etal_smac_RRTConnect.csv  Burger_etal_tpe_BKPIECE.csv  Burger_etal_tpe_BKPiece.csv  Burger_etal_tpe_BKPiece_1.csv  Burger_etal_tpe_RRTConnect.csv  Cano_etal_auc_bandit_BKPiece.csv  Cano_etal_auc_bandit_RRTConnect.csv  Cano_etal_aucbandit_BKPIECE.csv  Cano_etal_aucbandit_RRTConnect.csv  Cano_etal_default.csv  Cano_etal_default_narrow_passage.csv  Cano_etal_gbrt_BKPIECE.csv  Cano_etal_gbrt_RRTConnect.csv  Cano_etal_gp_BKPiece.csv  Cano_etal_gp_RRTConnect.csv  Cano_etal_ompl.csv  Cano_etal_ompl_narrow_passage.csv  Cano_etal_rand_BKPIECE.csv  Cano_etal_rand_BKPiece.csv  (+10 more)
crane_plus_control/results/final_1/: Burger_etal_aucbandit_BKPIECE.csv  Burger_etal_default.csv  Burger_etal_et_RRTConnect.csv  Burger_etal_gbrt_BKPIECE.csv  Burger_etal_gbrt_RRTConnect.csv  Burger_etal_ompl.csv  Burger_etal_rand_RRTConnect.csv  Burger_etal_smac_BiTRRT.csv  Burger_etal_smac_RRTConnect.csv  Burger_etal_tpe_BKPIECE.csv  Burger_etal_tpe_BiTRRT.csv  Cano_etal_default.csv  Cano_etal_et_BKPIECE.csv  Cano_etal_ompl.csv  Cano_etal_tpe_BKPIECE.csv
crane_plus_control/results/final_2/: Cano_etal_aucbandit_BKPIECE.csv  Cano_etal_aucbandit_RRTConnect.csv  Cano_etal_rand_BKPIECE.csv  Cano_etal_tpe_BKPIECE.csv
crane_plus_control/results/final_average/: Burger_etal_aucbandit_BKPIECE.csv  Burger_etal_aucbandit_BiTRRT.csv  Burger_etal_aucbandit_RRTConnect.csv  Burger_etal_default.csv  Burger_etal_et_BKPIECE.csv  Burger_etal_et_BiTRRT.csv  Burger_etal_et_RRTConnect.csv  Burger_etal_gbrt_BKPIECE.csv  Burger_etal_gbrt_RRTConnect.csv  Burger_etal_gp_BKPIECE.csv  Burger_etal_gp_BiTRRT.csv  Burger_etal_gp_RRTConnect.csv  Burger_etal_ompl.csv  Burger_etal_rand_BKPIECE.csv  Burger_etal_rand_BiTRRT.csv  Burger_etal_rand_RRTConnect.csv  Burger_etal_rf_BKPIECE.csv  Burger_etal_rf_BiTRRT.csv  Burger_etal_rf_RRTConnect.csv  Burger_etal_smac_BKPIECE.csv  Burger_etal_smac_BiTRRT.csv  Burger_etal_smac_RRTConnect.csv  Burger_etal_tpe_BKPIECE.csv  Burger_etal_tpe_BiTRRT.csv  Burger_etal_tpe_RRTConnect.csv  Cano_etal_aucbandit_BKPIECE.csv  Cano_etal_aucbandit_RRTConnect.csv  Cano_etal_default.csv  Cano_etal_et_BKPIECE.csv  Cano_etal_et_RRTConnect.csv  Cano_etal_gbrt_BKPIECE.csv  Cano_etal_gbrt_RRTConnect.csv  Cano_etal_gp_BKPIECE.csv  Cano_etal_gp_RRTConnect.csv  Cano_etal_ompl.csv  Cano_etal_rand_BKPIECE.csv  Cano_etal_rand_RRTConnect.csv  Cano_etal_rf_BKPIECE.csv  Cano_etal_rf_RRTConnect.csv  Cano_etal_smac_BKPIECE.csv  (+3 more)
crane_plus_control/results/param_tests/: Burger_etal_tpe_BKPIECE.csv  Burger_etal_tpe_BiTRRT.csv  Burger_etal_tpe_RRTConnect.csv  Cano_etal_aucbandit_RRTConnect.csv  Cano_etal_gp_BKPIECE.csv  Cano_etal_gp_RRTConnect.csv  Cano_etal_rand_BKPIECE.csv  Cano_etal_rand_RRTConnect.csv  Cano_etal_tpe_BKPIECE.csv  (+1 more)
crane_plus_control/scripts/: README.md  benchmark.db  benchmark_data.p  bm_1.15_13.19_1.p  eval_params.py  moveit_benchmark_statistics.py  objectives.py  param_tuning_session.py  parameter_tuning.py  parameter_tuning_session.py  parameter_tuning_skeleton.py  params_test.py  plots_test  timed_roslaunch.sh
crane_plus_control/src/: headless.cpp
crane_plus_description/: README.md  package.xml
crane_plus_gripper/: README.md  package.xml
crane_plus_gripper/script/: command_gripper.py
crane_plus_gripper/src/: gripper_controller.py
crane_plus_hardware/: README.md  package.xml
crane_plus_hardware/launch/: start_arm.launch
crane_plus_ikfast_arm_plugin/: README.md  package.xml
crane_plus_ikfast_arm_plugin/src/: crane_plus_arm_ikfast_solver.cpp
crane_plus_joint_state_publisher/: README.md  package.xml
crane_plus_joint_state_publisher/src/: crane_plus_joint_state_publisher.py
crane_plus_simulation/: CMakeLists.txt  README.md  package.xml
crane_plus_simulation/config/: crane_plus.yaml
crane_plus_simulation/launch/: simulation.launch
crane_plus_simulation/scripts/: resize_gazebo.py
crane_plus_simulation/urdf/: simulated_crane_plus.urdf.xacro
crane_plus_simulation/worlds/: empty_world.world  tuning_world.world
(+340 files in other folders)
