<package format="2">
  <name>crane_plus_gripper</name>
  <version>0.1.0</version>
  <description>
    Contains a node that provides a GripperCommand action server for the Crane+
    gripper.
  </description>
  <author>Charlene Leong</author>
  <maintainer email="charleneleong84@gmail.com">Charlene Leong</maintainer>
  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/turtlebot_arm_description</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_arm</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_arm/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
</package>
