<package>
  <name>crane_plus_hardware</name>
  <version>0.1.0</version>
  <description>
   crane_plus_hardware contains launch and configuration files for running the
   Crane+ manipulator hardware.
  </description>
  <author>Charlene Leong</author>
  <maintainer email="charleneleong84@gmail.com">Charlene Leong</maintainer>
  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/turtlebot_arm_description</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_arm</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_arm/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>crane_plus_description</exec_depend>
  <exec_depend>dynamixel_controllers</exec_depend>
</package>
