<?xml version='1.0' encoding='ASCII'?>
<package format="2">
  <name>crane_plus_ikfast_arm_plugin</name>
  <version>0.1.0</version>
  <description>
    The IKFast plugin for using the CRANE+ manipulator with MoveIt!.
  </description>
  <author>Charlene Leong</author>
  <maintainer email="charleneleong84@gmail.com">Charlene Leong</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/crane_plus_ikfast_arm_plugin</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <moveit_core plugin="${prefix}/crane_plus_arm_moveit_ikfast_plugin_description.xml"/>
  </export>
</package>
