<package format="2">
  <name>crane_plus_simulation</name>
  <version>0.1.0</version>
  <description>
   crane_plus_simulation contains launch and URDF files for running the Crane+ manipulator in a simulation.
  </description>
  <author>Charlene Leong</author>
  <maintainer email="charleneleong84@gmail.com">Charlene Leong</maintainer>
  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/turtlebot_arm_description</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_arm</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_arm/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>crane_plus_description</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

</package>
